--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-screens": "^3.34.0",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-vector-icons": "^10.1.0",
+    "socket.io-client": "^4.7.5",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
