--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.73.9",
     "react-native-floating-action": "^1.22.0",
     "react-native-gesture-handler": "^2.18.1",
+    "react-native-maps": "^0.31.1",
     "react-native-pager-view": "^6.4.0",
     "react-native-reanimated": "^3.15.0",
     "react-native-safe-area-context": "^4.10.9",
